--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@popperjs/core": "^2.11.8",
         "@vitejs/plugin-vue": "^6.0.1",
         "bootstrap": "^5.3.0",
-        "vue": "^3.5.22"
+        "vue": "^3.5.22",
+        "vue-i18n": "^9.14.5"
     }
 }
