--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "nunomaduro/larastan": "^3.7",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.3"
     },
